--- a/Corrida_Da_Fisica_Web/web/index.html
+++ b/Corrida_Da_Fisica_Web/web/index.html
@@ -27,7 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+
 
   <title>corrida_da_fisica_web</title>
   <link rel="manifest" href="manifest.json">
@@ -54,5 +56,29 @@
       });
     });
   </script>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD6EWNErs3cGsSDrlmYrwHb_rCHQj_gG9g",
+    authDomain: "corrida-da-fisica-web-3adf5.firebaseapp.com",
+    projectId: "corrida-da-fisica-web-3adf5",
+    storageBucket: "corrida-da-fisica-web-3adf5.appspot.com",
+    messagingSenderId: "1006686809644",
+    appId: "1:1006686809644:web:d5014dd9bf599153bb6b89",
+    measurementId: "G-LV5K2KDCJQ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
