--- a/corrida_da_fisica_mobile/web/index.html
+++ b/corrida_da_fisica_mobile/web/index.html
@@ -27,7 +27,8 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
   <title>corrida_da_fisica_mobile</title>
   <link rel="manifest" href="manifest.json">
@@ -54,5 +55,30 @@
       });
     });
   </script>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDXrXZLS_hB2oKwrAII1sxx2WiA9p1xCEU",
+    authDomain: "corrida-da-fisica-mobile.firebaseapp.com",
+    projectId: "corrida-da-fisica-mobile",
+    storageBucket: "corrida-da-fisica-mobile.appspot.com",
+    messagingSenderId: "337657520270",
+    appId: "1:337657520270:web:fe73268853d559c87ba9df",
+    measurementId: "G-T757JB1EEE"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
 </body>
 </html>
